<resources>
    <string name="app_name">Program2</string>
    <string name="profileImgAlt">Contact image</string>
    <string name = "imageButtonText">+</string>
    <string name="emailHint">Email Address</string>
    <string name="phoneNumberHint">Phone Number</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="addContact">Done</string>
</resources>