<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage"
        android:layout_width="138dp"
        android:layout_height="137dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="137dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circleImageView"
        app:srcCompat="@drawable/profile_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addImage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/round_button"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/imageButtonText"
        android:textSize="24sp"
        app:backgroundTint="#FF7048AE"
        app:backgroundTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
        app:layout_constraintEnd_toEndOf="@+id/profileImage" />

    <EditText
        android:id="@+id/emailAddr"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="37dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_bg_edittext"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="37dp"
        android:autofillHints="name"
        android:background="@drawable/rounded_bg_edittext"
        android:ems="10"
        android:hint="@string/firstNameHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="37dp"
        android:autofillHints="name"
        android:background="@drawable/rounded_bg_edittext"
        android:ems="10"
        android:hint="@string/lastNameHint"
        android:inputType="textPersonName|textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="37dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_bg_edittext"
        android:ems="10"
        android:hint="@string/phoneNumberHint"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddr" />

    <Button
        android:id="@+id/addContactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FF7048AE"
        android:text="@string/addContact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>